--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "handlebars": "^4.7.3",
     "immutable": "^3.8.2",
+    "peer": "^0.2.10",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-icons-kit": "^1.1.6",
+    "react-icons-kit": "^1.3.1",
     "react-scripts": "1.1.4",
     "slate": "^0.34.7",
     "slate-react": "^0.13.4",
